# ai-cybersecurity-anomaly-detection

./: README.md  main.py  pyproject.toml
backend/: realtime.py
frontend/: index.html
